# kingslayer-web

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile  package-lock.json  package.json  webpack.config.js
docs/: 1.js  417.js  game.js  index.html  index.js  kingslayer_wasm.js  kingslayer_wasm_bg.wasm  main.js  styles.css
kingslayer-wasm/: Cargo.toml  README.md  flake.nix
kingslayer-wasm/src/: lib.rs
public/: index.html
public/static/: styles.css
src/: game.js  index.html  index.js  main.rs
