[package]
name = "kingslayer-wasm"
version = "0.1.0"
authors = ["Maxwell Anderson <maxwell.brayden.anderson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
kingslayer = "0.4"
wasm-bindgen = "0.2"

console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
