[package]
name = "kingslayer-wasm"
version = "0.1.0"
authors = ["Maxwell Anderson <maxwell.brayden.anderson@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
kingslayer = "*
serde-wasm-bindgen = "0.2"
wasm-bindgen = "0.2"

console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
